--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -29,4 +29,4 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode1v3
 !default.mode2v3
 !default.pbxuser
-!default.perspectivev
+!default.perspectivev3
